Split up bot context